<resources>
    <string name="app_name">Merchant</string>
    <string name="nav_home">Home</string>
    <string name="nav_favourite">Favourite</string>
    <string name="nav_order">Order</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_account">Account</string>
    <string name="welcome">Welcome In RBT Merchant</string>
    <string name="start_journey">Start Journey</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_verify">Enter Received Code</string>
    <string name="verify">Verify Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo_image_desc">App Logo</string>
    <string name="logout">Logout</string>
    <string name="your_old_orders">Your Old Orders</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="license">license</string>
    <string name="logistics_company">Logistics Company</string>
    <string name="merchant">Merchant</string>
    <string name="bank_account">Bank Account</string>
    <string name="app_language_label">App Language</string>
    <string name="accept_order">Accept Order</string>
    <string name="jordan">Jordan</string>
    <string name="india">India</string>
    <string name="english">English</string>
    <string name="select_language">Select Language</string>
    <string name="store_name">Store Name</string>
    <string name="active">Active</string>
    <string name="not_active">Not Active</string>
    <string name="driver_profile_pic">driver profile pic</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="list_image">list Image</string>
    <string name="store_logo">Store Logo</string>
    <string name="current_orders">Orders</string>
    <string name="home">Home</string>
    <string name="offered_chats">Chats</string>
    <string name="statistics">Statistics</string>
    <string name="profile">Profile</string>
    <string name="archive">Archive</string>
    <string name="chat_logo">chat logo</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_message">send message</string>
    <string name="send_image">send image</string>
    <string name="send_voice_message">send voice message</string>
    <string name="image">image</string>
    <string name="chivalry_rbt">Chivalry RBT</string>
    <string name="new_chats"><![CDATA[New Chats >]]></string>
    <string name="new_order"><![CDATA[New Order >]]></string>
    <string name="chivalry_rbt_orders"><![CDATA[Chivalry RBT >]]></string>
    <string name="order_no">Order Number</string>
    <string name="client_name">Client Name:</string>
    <string name="order_date">Order Date:</string>
    <string name="reject_order">Reject Order</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="prepare_order">Prepare Order</string>
    <string name="delivery_order">Delivery Order</string>
    <string name="done_order">Done Order</string>
    <string name="order_invoice">Order Invoice</string>
    <string name="purchase_value">Purchase value</string>
    <string name="tax">Tax</string>
    <string name="delivery">Delivery</string>
    <string name="invoice_download">Invoice download</string>
    <string name="products">Products</string>
    <string name="number">Number</string>
    <string name="color">Color:</string>
    <string name="the_order_was_received_by_the_delivery_representative">The order was received by the delivery representative</string>
    <string name="phone_number_img">phone_number_img</string>
    <string name="confirm_receipt_of_order">Confirm receipt of order</string>
    <string name="product_image">product_image</string>
    <string name="client_information">Client Information</string>
    <string name="delivery_information">Delivery Information</string>
    <string name="branch">Branch</string>
    <string name="product_price_format"> %s R.S </string>
    <string name="conversational_options">Conversational Options</string>
    <string name="transfer_to_order">Transfer to order</string>
    <string name="refer_to_a_complaint">Refer to a complaint</string>
    <string name="transfer_to_an_inquiry">Transfer to an inquiry</string>
    <string name="related_orders">Related orders</string>
    <string name="related_complaints">Related Complaints</string>
    <string name="related_inquiries">Related Inquiries</string>
    <string name="branch_managing">Branches Management</string>
    <string name="delivery_status">Delivery Status</string>
    <string name="effective">Effective</string>
    <string name="not_effective">Not Effective</string>
    <string name="product_managing">Product Managing</string>
    <string name="quantity_available">Quantity Available</string>
    <string name="product_status">Product Status</string>
    <string name="send_a_price_quote">Send a price quote</string>
    <string name="receipt_from_the_store">from store</string>
    <string name="add_product">Add Product</string>
    <string name="current_product">Current Product</string>
    <string name="custom_product">Custom Product</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="choose_an_image">Choose an image</string>
    <string name="product_image_label">Product Image</string>
    <string name="add_to_quote">Add to quote</string>
    <string name="product_price_discount_format">%1$s%% discount</string>
    <string name="current_orders_tab">Current Orders</string>
    <string name="finished_orders">Finished Orders</string>
</resources>