<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="phoneAuthViewModel"
            type="com.rbt.merchant.presentation.fragment.phone_auth.PhoneAuthViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragment.phone_auth.PhoneAuthFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/_15sdp"
            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_rbt_logo"
                android:transitionName="from_splash_to_phone_auth"
                android:contentDescription="@string/app_logo_image_desc"
                android:layout_marginTop="@dimen/_50sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tx_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:text="@string/welcome"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/logo"
                app:layout_constraintStart_toStartOf="@+id/logo"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <TextView
                android:id="@+id/phone_auth_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:layout_marginVertical="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/tx_auth"
                app:layout_constraintStart_toStartOf="@id/tx_auth"
                app:layout_constraintEnd_toEndOf="@id/tx_auth"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_ed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginVertical="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/phone_auth_tv"
                app:layout_constraintStart_toStartOf="@id/phone_auth_tv"
                app:layout_constraintEnd_toEndOf="@id/phone_auth_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_carve_gray"
                    android:inputType="numberDecimal"
                    android:text="@={phoneAuthViewModel.phone}"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                style="@style/dark_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@drawable/draw_border_medium_purple"
                android:onClick="@{(view)->phoneAuthViewModel.onClickSendOtpBtn(view)}"
                android:text="@string/start_journey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_number_ed" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>