<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.fragment.home.main.chat.price_quote.PriceQuoteBottomSheetDialogFragment">

        <TextView
            android:id="@+id/add_product_bottom_sheet_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_18sdp"
            android:fontFamily="@font/cairo_bold"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/price_quote_tab_dialog"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            app:tabTextAppearance="@style/TextAppearance.App.Tab"
            app:tabTextColor="@color/gray"
            app:tabSelectedTextColor="@color/purple_500"
            app:tabRippleColor="@color/white"
            app:tabIndicatorColor="@color/purple_500"
            app:tabIndicatorHeight="@dimen/_2sdp"
            app:tabIndicatorAnimationMode="linear"
            app:layout_constraintTop_toBottomOf="@+id/add_product_bottom_sheet_title_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_product"
                android:textSize="@dimen/_15sdp" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_product"
                android:textSize="@dimen/_15sdp" />
        </com.google.android.material.tabs.TabLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toTopOf="@+id/price_quote_view_pager"
            app:layout_constraintEnd_toEndOf="@+id/price_quote_view_pager"
            app:layout_constraintStart_toStartOf="@+id/price_quote_view_pager" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/price_quote_view_pager"
            android:layout_width="0dp"
            android:layout_height="@dimen/_350sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:animateLayoutChanges="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_quote_tab_dialog" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>